--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Garaph</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,11 +74,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/graph.jpeg" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Garaph</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">GPU-based Asynchronous Graph Processing Framework</span>
                     </div>
                 </div>
             </div>
@@ -170,14 +170,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Garaph is framework for building efficient GPU-based graph processing applications. Garaph adopts a similar programming interface like GraphLab and Pregel, and supports efficient asynchronous processing on the GPU.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Has no GPU programming experience? Garaph enables C/C++ programmers to harness the GPU for graph processing without needing to learn GPGPU programming. Garaph offers high level programming abstractions, users just need to focus on the application logic, and the underlying complexities are handled by the framework. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> Download Source Code
                     </a>
                 </div>
             </div>
